trying to fix input on mobile

--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ strong{
     display: flex;
     justify-content: space-evenly;
     padding: 20px 0px 20px 0px;
+    
+}
+.imgCity{
+    transition: 1s ease-in-out;
+}
+.imgCity:hover{
+    border: solid #F03D24 5px;
 }
 .cities-image img{
     width: 220px;
@@ -365,6 +372,9 @@ figcaption{
 }
 
 @media only screen and (max-width: 359px){
+    .lupe-background{
+        z-index: 4;
+    }
     .week-forecast{
         color: white;
     }
@@ -386,6 +396,7 @@ figcaption{
     }
     input{
         width: 170px;
+        z-index: 4;
     }
     .statusIcon{
         width: 30px;
@@ -448,8 +459,12 @@ figcaption{
     .forecast__header{
         padding: 30px 10px;
     }
+    .lupe-background{
+        z-index: 4;
+    }
     input{
         width: 200px;
+        z-index: 4;
     }
     .mobileForecast{
         z-index: 1;
@@ -565,9 +580,13 @@ figcaption{
     .forecast__header{
         padding: 30px 10px;
     }
+    .lupe-background{
+        z-index: 4;
+    }
     input{
         width: 400px;
         font-size: 1.1rem;
+        z-index: 4;
     }
     .statusIcon{
         width: 30px;
@@ -670,9 +689,13 @@ figcaption{
     .home__header{
         padding: 40px 20px;
     }
+    .lupe-background{
+        z-index: 4;
+    }
     input{
         width: 400px;
         font-size: 1.1rem;
+        z-index: 4;
     }
     .home, .forecast, .mobileForecast{
         width: 100%;
